--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation 'com.google.android.gms:play-services-maps:12.0.1'
-    compile 'com.google.maps:google-maps-services:0.2.6'
-    compile 'org.slf4j:slf4j-nop:1.7.25'
+    implementation 'com.google.android.gms:play-services-location:12.0.1'
+    implementation 'com.google.android.gms:play-services-places:12.0.1'
+    implementation 'com.google.maps:google-maps-services:0.2.6'
+    implementation 'org.slf4j:slf4j-nop:1.7.25'
 }
